fixed card gap

--- a/src/css/Details.css
+++ b/src/css/Details.css
@@ -231,6 +231,7 @@
   }
   .recommended-grid{
     grid-template-columns: repeat(2,1fr);
+    gap: 20px;
   }
   .anime-trailer iframe{
     max-width: 700px;
